--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Nicholas
+title: Nicholas De Young
 subtitle: Micadurp
 description: >- # this means to ignore newlines until "baseurl:"
   This is the demo site for a Jekyll theme version of
@@ -59,5 +59,5 @@ dribbble_url:
 google_analytics:
 
 # The following settings are NECESSARY for the Prologue theme to run:
-theme: chrisbobbe/jekyll-theme-prologue
+remote_theme: chrisbobbe/jekyll-theme-prologue
 collections: [sections]
