--- a/_config.yml
+++ b/_config.yml
@@ -33,8 +33,7 @@
 title: Nicholas De Young
 subtitle: Micadurp
 description: >- # this means to ignore newlines until "baseurl:"
-  This is the demo site for a Jekyll theme version of
-  HTML5 UP's sleek, responsive site template Prologue.
+  Personal website for Nicholas De Young to show off some portfolio and such.
 author: Nicholas De Young
 email: nicholas@deyoung.se
 avatar: assets/images/avatar.jpg
